8: found a way of fixing scrollbar
fixed error with overlay window

--- a/style.css
+++ b/style.css
@@ -39,6 +39,9 @@ video#bgvid {
   z-index: 10;
   cursor: pointer;
 }
+.menu-toggle:hover{
+  color: grey;
+}
 .bar, .bar1, .bar2{
   width: 40px;
   height: 10px;
@@ -68,6 +71,7 @@ video#bgvid {
 }
 .primary-menu{
   width: 100vw;
+  overflow: hidden;
   height: 100vh;
   background-color:black;
   opacity: 0.9;
